# vision_ocr_dumper

./: .env.example  .gitignore  README.md  draw_settings.yaml  example_json.json  main.py  pyproject.toml
ocr_annotation_dumper/: __init__.py  config.py  main.py  utils.py  visualizer.py
